assets/template/css/card.less
& .card {
  .flex();

  & .container {

    & .card__wrap {

      & nav {

        & ul.breadcrumb {

          & li {
            color: @colorGrayDark;

            & a {
              color: @colorGrayDark;

            }
          }

          & li.active {

          }
        }
      }

      & .card__main {
        margin: 40px 0;

        @media @m {
          margin: 0;
        }

        & .product {

          & .product__item {

            & .product__item_wrap {
              .flex();
              justify-content: space-between;

              & .product__item_left {
                .cols(7.5);

                @media @t, @mBig, @m {
                  .cols(16);
                }

                & .product__item_img {
                  position: relative;

                  & .zoom {
                    position: absolute;
                    left: 10px;
                    top: 10px;
                    z-index: 100;
                    cursor: pointer;

                    @media @t {
                      left: 100px;
                    }

                    &:hover {

                      & svg {
                        transform: scale(1.3, 1.3);
                      }
                    }

                    & svg {
                      .animation();

                      & path {
                        fill: @colorRed;
                      }
                    }
                  }

                  & #msGallery {

                    & .fotorama {

                      & .fotorama__wrap {
                        margin: 0 auto;
                      }
                    }
                  }
                }

                & .product__item_instruction {
                  .flex();
                  justify-content: space-around;
                  align-items: center;
                  margin: 30px 0;
                  
                  @media @m {
                    position: relative;
                    margin: 20px 0 10px;
                  }

                  & .instruction_item {
                    .cols(4);
                    text-align: center;
                    position: relative;
                    height: 66px;

                    @media @m {
                      .cols(3.8);
                      height: 40px;
                      position: initial;
                    }

                    & svg {
                      max-width: 100%;
                      max-height: 100%;
                    }

                    .product__item_instruction_popup {
                      width: 550px;

                      @media @m {
                        left: 2.5%;
                        margin: 10px 0;
                        width: 90%;
                        min-width: auto;
                      }

                      &:before {

                        @media @m {
                          display: none;
                        }
                      }
                    }
                  }
                }
              }

              & .product__item_right {
                .cols(8);

                @media @t, @mBig, @m {
                  .cols(16);
                }

                & .product__title {

                  & h1 {
                    color: @colorRed;

                    @media @m {
                      margin-bottom: 0;
                    }
                  }
                }

                & .product__item_article {

                  & p {
                    color: @colorGrayDark;
                    font-size: 10pt;
                  }
                }

                & form.ms2_form {

                  & .price_block {
                    .flex();
                    align-items: center;
                    justify-content: space-between;

                    & .product__item_price {
                      padding-right: 20px;

                      @media @m {
                        margin-bottom: 10px;
                      }

                      & .product_price_wrap {
                        font-family: @fontGeomBold;
                        font-size: 16pt;
                        margin-bottom: 0;

                        & #price {

                        }
                      }
                    }

                    & .product__item_button {

                      & a {

                        &.fast_buy {
                          .animation();
                          border: 1px solid @colorRed;
                          color: @colorBlack;
                          background: transparent;

                          &:hover {
                            background-color: @colorBlack;
                            color: @colorWhite;
                          }
                        }
                      }
                    }

                    & .share {
                      .flex();
                      align-items: center;
                      position: relative;

                      @media @d {
                        margin: 20px 0 0 auto;
                      }
                      @media @m {
                        margin: 10px 0;
                        min-width: 40%;
                      }

                      & svg {
                        margin-right: 10px;
                      }

                      & .share_button {
                        margin: 0;
                        cursor: pointer;
                      }

                      & .product__item_share {
                        padding: 20px 10px 14px;
                        right: 0;
                        width: 200px;
                        visibility: visible;
                        opacity: 1;
                        transition: none;
                        display: none;

                        @media @m {
                          left: 0;
                        }

                        &:before {
                          left: 135px;

                          @media  @m {
                            left: 20px;
                          }
                        }


                        & .share_popup {
                          .flex();
                          justify-content: space-between;

                          & a {

                            &:hover {

                              & svg {

                                & path {
                                  fill: @colorRed;
                                }
                              }
                            }

                            & svg {

                              & path {
                                .animation();
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }

                & .pay_block {
                  .flex();
                  align-items: center;
                  margin: 20px 0;

                  & img {
                    .animation();
                    filter: grayscale(100%);
                    margin-right: 10px;

                    &:hover {
                      filter: none;
                    }
                  }
                }

                & .shipping_block {
                  .flex();
                  align-items: center;
                  margin: 20px 0;

                  & > p {
                    .cols(16);
                  }

                  & .shipping_btn {
                    background: @colorWhite;
                    border: 1px solid @colorRed;
                    color: @colorBlack;
                    margin-right: 10px;

                    &.active {
                      background: @colorRed;
                      color: @colorWhite;
                      border: 1px solid transparent;
                    }

                    &:hover {
                      background: @colorRed;
                      color: @colorWhite;
                      border: 1px solid transparent;
                    }
                  }

                  & .shipping_item_text {
                    .cols(16);
                    position: relative;

                    & .shipping_text {
                      width: 100%;
                      opacity: 1;
                      visibility: visible;
                      transition: none;
                      display: none;

                      &:nth-child(2) {
                        &:before {
                          left: 205px;
                        }
                      }

                      &:before {
                        background: @colorWhite;
                        box-shadow: -6px -6px 20px -8px @colorBlack;
                        content: '';
                        position: absolute;
                        top: -10px;
                        left: 65px;
                        width: 20px;
                        height: 20px;
                        transform: rotate(45deg);
                      }

                      & p, h2 {

                        @media @m {
                          margin-top: 0;
                        }
                      }
                    }
                  }
                }

                & .product__item_content {
                  margin: 40px 0;

                  @media @m {
                    margin: 0;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

